--- a/style.css
+++ b/style.css
@@ -142,24 +142,50 @@
   padding-right: 10pt;
 }
 
-.portfolio {
+.container5 {
   text-align: center;
+  margin-top: 60px;
+  flex-wrap: wrap;
 }
-
-.portfolio h3 {
+.container5 h3 {
   color: gold;
+  margin-bottom: 20px;
+  font-size: 10px;
+}
+.container5 h2 {
+  font-size: 50px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin-bottom: 20px;
 }
 
-.portfolio h2 {
-  color: black;
-  font-weight: bold;
-  font-size: 50pt;
+.flexcontainer {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 60px;
+  margin-top: 20px;
+  justify-content: center;
 }
 
-.Projects {
-  display: block;
-  -moz-column-count: 2;
-       column-count: 2;
+.flex-images {
+  position: relative;
+  width: 35%;
+  margin-top: -5px;
+}
+.flex-images > div {
+  position: absolute;
+  z-index: 2;
+  bottom: 60px;
+  left: 30px;
+  color: white;
+  justify-content: center;
+  text-align: justify;
+  font-size: 20px;
+}
+.flex-images > img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .header5 {
@@ -205,6 +231,7 @@
   justify-content: center;
   align-content: space-evenly;
   justify-content: center;
+  justify-content: space-around;
 }
 
 .icon1 {
