--- a/style.scss
+++ b/style.scss
@@ -63,11 +63,6 @@ padding-right: 10px;}
 border-radius: 100%;}
 .img{height: 30px;width: 40px;}
 
-
-
-
-
-
 .header4{background-image: url(img/img/bg-callout.jpg);height: 90vh;display: flex;flex-direction: column;align-items: center;
   justify-content: center;flex-wrap: wrap;}
 .header4  h4 {font-weight: bold;font-size: 50px;}
@@ -78,11 +73,54 @@ padding-left: 10pt;
 padding-top: 10pt;
 padding-right: 10pt;}
 
-.portfolio{text-align: center;}
-.portfolio h3{color: gold;}
-.portfolio h2{color: black;font-weight: bold;font-size: 50pt;}
+.container5{
+  text-align: center; margin-top: 60px; flex-wrap: wrap;
+  h3{
+    color: gold;
+    margin-bottom: 20px;
+    font-size: 10px;}
+  
+  h2{
+    font-size: 50px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 20px;
+  }
+}
+.flexcontainer{
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 60px;
+    margin-top: 20px;
+    justify-content: center;
+  }
+  
+  .flex-images{
+    position: relative;
+    width: 35%;
+    margin-top: -5px;
+  
+  >div{
+    position: absolute;
+    z-index: 2;
+    bottom: 60px;
+    left: 30px;
+    color: white;
+    justify-content: center;
+    text-align: justify;
+    font-size: 20px;
+  }
+  >img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+}
 
-.Projects{ display: block; ;column-count: 2;}
+
+
+
+
+
 
 .header5{background-color: royalblue;height: 50vh;display: flex;flex-direction: column;
 text-align: center;align-items: center;justify-content: center;align-content: space-evenly;justify-content: center;}
@@ -101,7 +139,7 @@ text-align: center;align-items: center;justify-content: center;align-content: sp
 
 .icons{background-color: white;
 height: 50vh;width: 100%;;display: flex;flex-direction: row;
-text-align: center;align-items: center;justify-content: center;align-content: space-evenly;justify-content: center;}
+text-align: center;align-items: center;justify-content: center;align-content: space-evenly;justify-content: center;justify-content: space-around;}
 
 .icon1{background-color: royalblue;height: 80px;width: 80px;border-radius: 100%;align-items: center;
   justify-content: center;align-content: space-evenly;justify-content: center;}
@@ -113,7 +151,7 @@ text-align: center;align-items: center;justify-content: center;align-content: sp
 .icon2 img{width: 40px ;height: 40px;}
 
 .icon3{background-color: royalblue;height: 80px;width: 80px;border-radius: 100%;align-items: center;
-  justify-content: center;align-content: space-evenly;justify-content: center;}
+  justify-content: center;align-content: space-evenly;justify-content: center; }
 .icon3 img{width: 40px ;height: 40px;}
 
 
